# quolaty

./: requirements.txt
app/: pyproject.toml
app/quolaty/: app.py  blog.py  quotes.py
dashboard/dashboard/: settings.py
dashboard/quotes/: admin.py  models.py
dashboard/quotes/migrations/: 0001_initial.py
qoulaty-ui/: README.md  package-lock.json  package.json
